# dgango_menu

./: .gitignore  README.MD  pyproject.toml
menu/: models.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_menuitem_display_name.py
menu/templates/: home.html
menu/templates/menu/: menu.html
menu/templatetags/: menu_tags.py
menuapp/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
